# xcom232i

./: .clang-format  CMakeLists.txt  LICENSE  README.md  TODO  fsc.c  grafana.json  version.lua  xci.lua  xci_init.lua  xcic.c
cmake/: FindFuse3.cmake
scripts/: checksum.lua  conversions.lua  date.lua  fs.lua  limits.lua  messages.lua  readdir.lua  readfile.lua  reopen.lua  update.lua  version.lua  write.lua
